--- a/gameStyle.css
+++ b/gameStyle.css
@@ -52,6 +52,8 @@ body {
     height: 50vh;
     border-radius: 50%;
     background-color: #efedf0;
+    /* background-image: url('./map.png');
+    background-size: cover; */
     display: flex;
     flex-direction: column;
     justify-content: center;
